--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div id="score" class="hidden">
-            <h1>Your Score:-<span></span></h1>
+            <h1>Your Score:  <span></span></h1>
         </div>
     </div>
 
